--- a/helloworld-blockchain-application/src/main/resources/static/pay.html
+++ b/helloworld-blockchain-application/src/main/resources/static/pay.html
@@ -24,7 +24,7 @@
                     <ul class="nav navbar-nav">
                         <li><a href="./search.html">搜索</a></li>
                         <li><a href="./miner.html">挖矿</a></li>
-                        <li><a href="./unconfirm-transactions.html">未确认交易池</a></li>
+                        <li><a href="./unconfirmed-transactions.html">未确认交易池</a></li>
                         <li class="active"><a href="./pay.html">支付</a></li>
                         <li><a href="./wallet.html">钱包</a></li>
                         <li><a href="./node-management.html">节点管理</a></li>
@@ -80,11 +80,11 @@
             async function confirmPayment(){
                 let nonChangePayees = [];
                 Array.from($('[name="nonChangePayee"]')).forEach(item => {
-                    nonChangePayees.push({address:$(item).find('[name="address"]:first').val().trim(),value:$(item).find('[name="money"]:first').val()})
+                    nonChangePayees.push({address:$(item).find('[name="address"]:first').val().trim(),value:parseInt($(item).find('[name="money"]:first').val())})
                 });
                 let request1 = JSON.stringify({nonChangePayees})
                 let response = await $ajax({
-                    url : baseUrl() + "/Api/WalletApplication/AutoBuildTransaction",
+                    url : baseUrl() + "/Api/WalletApplication/AutomaticBuildTransaction",
                     data: request1
                 })
                 if(response.status == 'success'){
@@ -94,7 +94,6 @@
                         url : baseUrl() + "/Api/WalletApplication/SubmitTransactionToBlockchainNetwork",
                         data: JSON.stringify(request2),
                     });
-                    alert(response2.message);
 
                     let payersHtml = response.data.payers.map((item,index) => {
                         return `
@@ -162,7 +161,7 @@
                           <ul class="list-group">
                             <li class="list-group-item">方式一：付款方进入<a target="_blank" href="./wallet.html">钱包</a>查看钱的总额是否变化</li>
                             <li class="list-group-item">方式二：通知收款方进入<a target="_blank" href="./wallet.html">钱包</a>查看钱的总额是否变化</li>
-                            <li class="list-group-item">方式三：查看<a target="_blank" href="./unconfirm-transaction.html?transactionHash=${response.data.transactionHash}">交易</a>是否被区块链确认。若发现交易暂未被确认，可打开链接后，复制保存链接，稍后再查看。</li>
+                            <li class="list-group-item">方式三：查看<a target="_blank" href="./unconfirmed-transaction.html?transactionHash=${response.data.transactionHash}">交易</a>是否被区块链确认。若发现交易暂未被确认，可打开链接后，复制保存链接，稍后再查看。</li>
                           </ul>
                         </div>
                         <button type="button" class="btn btn-success" style="margin-left:45%" onclick="layer.close(layer.index);">关闭</button>
@@ -179,7 +178,7 @@
                       content: payDetailHtml
                     });
                 }else {
-                    alert(response.message);
+                    alert(localLanguage(response.message));
                 }
             }
 
