--- a/helloworld-blockchain-application/src/main/resources/static/unconfirmed-transactions.html
+++ b/helloworld-blockchain-application/src/main/resources/static/unconfirmed-transactions.html
@@ -24,7 +24,7 @@
                     <ul class="nav navbar-nav">
                         <li><a href="./search.html">搜索</a></li>
                         <li><a href="./miner.html">挖矿</a></li>
-                        <li class="active"><a href="./unconfirm-transactions.html">未确认交易池</a></li>
+                        <li class="active"><a href="./unconfirmed-transactions.html">未确认交易池</a></li>
                         <li><a href="./pay.html">支付</a></li>
                         <li><a href="./wallet.html">钱包</a></li>
                         <li><a href="./node-management.html">节点管理</a></li>
@@ -51,37 +51,16 @@
                 if(unconfirmedTransactions == null || unconfirmedTransactions.length == 0){
                     $("#page button").html("未确认交易数据加载完毕。");
                 }
-                unconfirmedTransactions.forEach(item => {
-                    $('#container').append(unconfirmedTransactionHtml(item))
-                })
+                if(!isNullOrUndefined(unconfirmedTransactions)){
+                    unconfirmedTransactions.forEach(item => {
+                        $('#container').append(unconfirmedTransactionHtml(item))
+                    })
+                }
 
                 let jsonObjectRequest = JSON.parse(request);
                 jsonObjectRequest.pageCondition.from += jsonObjectRequest.pageCondition.size;
                 request = JSON.stringify(jsonObjectRequest);
             }
-            function unconfirmedTransactionHtml(item){
-                let left = '';
-                item.inputs.forEach(item1 => {
-                    left += `<div>付：<span><a title="地址，点击查看地址详情。" target="_blank" href="./address.html?address=${item1.address}">${item1.address}</a></span>&nbsp;<a title="交易输出，点击查看交易输出详情。" target="_blank" href="./transactionoutput.html?transactionHash=${item1.transactionHash}&transactionOutputIndex=${item1.transactionOutputIndex}"><i class="glyphicon-euro"></i></a>&nbsp;<span>${item1.value}</span></div>`
-                })
-                let right = ''
-                item.outputs.forEach(item1 => {
-                    right += `<div style="display:flex">收：<span><a title="地址，点击查看地址详情。" target="_blank" href="./address.html?address=${item1.address}">${item1.address}</a></span>&nbsp;<a title="交易输出，点击查看交易输出详情。" target="_blank" href="./transactionoutput.html?transactionHash=${item1.transactionHash}&transactionOutputIndex=${item1.transactionOutputIndex}"><i class="glyphicon-euro"></i></a>&nbsp;<span>${item1.value}</span></div>`
-                });
-                let transactionHtml = `
-                    <div style="font-size: 14px; line-height: 40px; margin-top: 10px;">
-                        <!-- 开头 -->
-                        <div style="display: flex; background-color: #f5f5f5; flex-wrap: wrap; border-top: 1px solid #ddd; border-bottom: 1px solid #ddd;">
-                            <div style="min-width: 40%;"><a title="交易哈希，点击查看交易详情。" target="_blank" href="./transaction.html?transactionHash=${item.transactionHash}">${item.transactionHash}</a></div>
-                        </div>
-                        <div style="display: flex; flex-wrap:wrap;">
-                            <div style="width:auto; min-width:50%;">${left}</div>
-                            <div style="width:auto; min-width:40%;">${right}</div>
-                        </div>
-                    </div>
-                `;
-                return transactionHtml;
-            };
         </script>
     </body>
 </html>
